--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         document.addEventListener('keypress', keypress_ivent);
 
         function keypress_ivent(e) {
-            window.location.href = 'https://take2fun.github.io/-PreNonLiner_1.3/';
+            window.location.href = 'https://take2fun.github.io/Nonliner_1.9/';
             return false;
         }
 
